# task-manager-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
tasks/: admin.py  models.py  serializers.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_options.py
tests/: test_serializers.py  test_views.py
users/migrations/: 0001_initial.py
