[tool.poetry]
name = "task-manager-api"
version = "0.1.0"
description = "Django REST API for managing tasks and tags"
authors = ["Aleksandr <94639744+ls500pymaster@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "tasks" }, { include = "users" }, { include = "config" }]

[tool.poetry.dependencies]
python = ">=3.11,<4"
django = ">=4.2,<5.0"
djangorestframework = ">=3.16.0,<4.0.0"
django-filter = ">=25.1,<26.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
drf-spectacular = ">=0.28.0,<0.29.0"
django-environ = ">=0.11,<1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.1"
black = "^25.1.0"
flake8 = "^7.2.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.flake8]
max-line-length = 88
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "build",
  "migrations",
  "staticfiles"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests/test_*.py"]
